# PPDS-Projet-final

./: README.md  explo_pre_process.ipynb  main.ipynb  main.py  pyproject.toml  stat_desc.py  stat_desc_antoine.ipynb  stat_desc_antoine.py
data/: fetch_data.py  pre_process.py  pre_process_parquet.py  retreive_data_from_sspcloud.py  test_splits_clean.csv
src/model/: bootstrap.py  config.py  data_engineering.py  test.ipynb  train.py  visualization.py
