[project]
name = "ppds-projet-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "great-tables>=0.21.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "polars>=1.39.3",
    "pyarrow>=24.0.0",
    "requests>=2.33.1",
    "s3fs>=2026.3.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
